Prevent percentage indicator to wrap in two lines

--- a/app/assets/stylesheets/widgets/details_bar.css.scss
+++ b/app/assets/stylesheets/widgets/details_bar.css.scss
@@ -275,6 +275,7 @@ $phase-height: 66px;
         font-size: 11px;
         position: absolute;
         right: 8px;
+        white-space: nowrap;
       }
     }
     &:nth-child(2){
